# vLLM-SpecDec-High-Throughput-LLM-Serving

./: .dockerignore  .gitignore  DOCKER_RECOVERY_STATUS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REMOTE_DEPLOY.md  RUNBOOK.md  pyproject.toml  render.yaml  requirements.txt
benchmarks/: README.md  prompts.jsonl  target_a100_report.json
configs/: llama3_8b_specdec.json
docker/: .env.example  Dockerfile  Dockerfile.render  docker-compose.yml
patches/: UPSTREAM_INTEGRATION.md
scripts/: benchmark.py  bootstrap_vllm_fork.ps1  compare_live_servers.py  deploy_live_gpu_linux.sh  deploy_to_remote_linux_gpu.ps1  launch_tp_server.py  live_serving_benchmark.py  profile_nsys.py  render_status_server.py  run_project1_pipeline.py  run_real_a100_comparison.ps1  vendor_smoke_check.py
src/vllm_specdec/: __init__.py  benchmark.py  config.py  cuda_graphs.py  engine.py  live_benchmark.py  nsys_profiler.py  reporting.py  spec_decode.py  tensor_parallel.py  vendor_integration.py
tests/: test_benchmark.py  test_engine.py  test_live_benchmark.py  test_live_comparison.py  test_nsys_profiler.py  test_pipeline.py  test_spec_decode.py  test_vendor_integration.py
